--- a/index.html
+++ b/index.html
@@ -3,50 +3,45 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ProOnePage — Page pro en 72h · À partir de 149€</title>
+  <title>ProOnePage — Page pro en 72h · 149€</title>
   <meta name="description" content="ProOnePage — Je crée votre page web professionnelle, rapide et responsive. Idéal pour artisans, indépendants et petites entreprises. Livraison en 72h." />
   <!-- Open Graph -->
-  <meta property="og:title" content="ProOnePage — Page pro en 72h · À partir de 149€" />
+  <meta property="og:title" content="ProOnePage — Page pro en 72h · 149€" />
   <meta property="og:description" content="Page web simple, design pro, formulaire de contact et optimisation locale. Démo: officielstephanewinckel.vercel.app" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=ProOnePage" />
 
-  <!-- Tailwind CDN (rapide pour prototype) -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
   <style>
-    :root{--brand:#1f5e2c}
+    :root{--brand:#001f3f} /* Bleu marine */
     body{font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;}
     .btn{transition:all .18s ease}
     .btn:hover{transform:translateY(-3px)}
     header{backdrop-filter:saturate(120%) blur(4px)}
-    /* petites animations */
     .fade{opacity:0;transform:translateY(12px);animation:fade .6s forwards}
     @keyframes fade{to{opacity:1;transform:none}}
   </style>
 </head>
-<body class="bg-gray-50 text-gray-800 leading-relaxed">
+<body class="bg-gray-50 text-gray-900 leading-relaxed">
 
   <!-- Header -->
-  <header class="sticky top-0 z-40 bg-white/80 border-b border-gray-200">
+  <header class="sticky top-0 z-40 bg-white/90 border-b border-gray-200">
     <div class="max-w-5xl mx-auto px-6 py-4 flex items-center justify-between">
       <div class="flex items-center gap-4">
         <div class="w-10 h-10 rounded-md bg-[var(--brand)] flex items-center justify-center text-white font-semibold">P1</div>
         <div>
           <div class="text-lg font-semibold" style="color:var(--brand)">ProOnePage</div>
-          <div class="text-xs text-gray-500">Page pro en 72h — à partir de 149€</div>
+          <div class="text-xs text-gray-500">Page pro en 72h — 149€</div>
         </div>
       </div>
       <nav class="flex items-center gap-4 text-sm">
-        <a href="#how" class="hover:underline">Comment</a>
         <a href="#offre" class="hover:underline">Offre</a>
-        <a href="#exemples" class="hover:underline">Exemples</a>
+        <a href="#exemples" class="hover:underline">Exemple</a>
         <a href="#contact" class="btn bg-[var(--brand)] text-white px-4 py-2 rounded-md">Commander</a>
       </nav>
     </div>
   </header>
 
-  <!-- Main -->
   <main class="max-w-5xl mx-auto px-6 py-16 space-y-20">
 
     <!-- Hero -->
@@ -56,13 +51,13 @@
         <p class="text-gray-700 mb-6">ProOnePage conçoit pour vous une page unique (one-page) : claire, responsive et optimisée pour être trouvée localement. Idéale pour artisans, indépendants, commerciaux et petites entreprises.</p>
         <ul class="space-y-2 text-gray-700 mb-6">
           <li>✔ Design professionnel personnalisé</li>
-          <li>✔ Formulaire opérationnel & liens directs (téléphone, email, WhatsApp)</li>
-          <li>✔ Optimisation basique SEO locale</li>
+          <li>✔ Contenu structuré : présentation, services, carte & formulaire</li>
+          <li>✔ Optimisation locale pour Google</li>
           <li>✔ Livraison en <strong>72 heures</strong></li>
         </ul>
         <div class="flex gap-3">
           <a href="#contact" class="btn bg-[var(--brand)] text-white px-5 py-3 rounded-md">Commander — 149€</a>
-          <a href="#exemples" class="btn border border-[var(--brand)] text-[var(--brand)] px-5 py-3 rounded-md">Voir une démo</a>
+          <a href="#exemples" class="btn border border-[var(--brand)] text-[var(--brand)] px-5 py-3 rounded-md">Voir la démo</a>
         </div>
       </div>
 
@@ -70,7 +65,7 @@
         <div class="bg-white rounded-xl shadow-md overflow-hidden">
           <img src="https://via.placeholder.com/800x480.png?text=Exemple+ProOnePage" alt="Aperçu ProOnePage" class="w-full h-56 object-cover" />
           <div class="p-5">
-            <p class="text-sm text-gray-500">Exemple de onepage réalisé pour un chargé d'affaires — design sobre et création rapide.</p>
+            <p class="text-sm text-gray-500">Exemple : site Dirickx Luxembourg — design sobre et création rapide.</p>
             <div class="mt-3">
               <a href="https://officielstephanewinckel.vercel.app" target="_blank" rel="noopener" class="text-sm text-[var(--brand)] hover:underline">Voir la démo</a>
             </div>
@@ -81,7 +76,7 @@
 
     <!-- Offre -->
     <section id="offre" class="bg-white rounded-xl p-8 shadow-sm fade">
-      <h2 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Ce qui est inclus — Formule de base • 149€</h2>
+      <h2 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Ce qui est inclus — Formule unique • 149€</h2>
       <div class="grid md:grid-cols-3 gap-6">
         <div class="p-4 border rounded">
           <h4 class="font-medium mb-2">Design personnalisé</h4>
@@ -89,69 +84,29 @@
         </div>
         <div class="p-4 border rounded">
           <h4 class="font-medium mb-2">Contenu & contact</h4>
-          <p class="text-sm text-gray-600">Sections présentation, services, carte & formulaire de contact.</p>
+          <p class="text-sm text-gray-600">Sections présentation, services, carte & formulaire de contact opérationnel.</p>
         </div>
         <div class="p-4 border rounded">
           <h4 class="font-medium mb-2">Mise en ligne rapide</h4>
           <p class="text-sm text-gray-600">Hébergement simple (ou livraison des fichiers) + nom de domaine en option.</p>
         </div>
       </div>
-
-      <div class="mt-6 grid md:grid-cols-2 gap-6">
-        <div>
-          <h4 class="font-medium">Options (en supplément)</h4>
-          <ul class="mt-2 text-sm text-gray-700 space-y-1">
-            <li>• Référencement local avancé — +99€</li>
-            <li>• Multi-langue (FR/EN) — +79€</li>
-            <li>• Intégration paiement / réservation — sur devis</li>
-            <li>• Gestion d'e-mails / maintenance mensuelle — abonnement</li>
-          </ul>
-        </div>
-        <div class="bg-gray-50 p-4 rounded border">
-          <div class="text-sm text-gray-500">Prix clair</div>
-          <div class="mt-2 text-3xl font-bold" style="color:var(--brand)">149€</div>
-          <div class="text-sm text-gray-500">Livré en 72h après validation des éléments</div>
-          <a href="#contact" class="mt-4 inline-block bg-[var(--brand)] text-white px-4 py-2 rounded-md">Commander maintenant</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- Process -->
-    <section id="how" class="fade">
-      <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Process simple en 3 étapes</h3>
-      <div class="grid md:grid-cols-3 gap-6">
-        <div class="p-5 bg-white rounded shadow-sm">
-          <div class="text-2xl font-bold mb-2">1. Commande</div>
-          <p class="text-sm text-gray-600">Tu remplis le formulaire ou m'envoies un message (logo, textes, photos).</p>
-        </div>
-        <div class="p-5 bg-white rounded shadow-sm">
-          <div class="text-2xl font-bold mb-2">2. Maquette</div>
-          <p class="text-sm text-gray-600">Je t'envoie une maquette (24–36h). Tu valides ou demandes des ajustements.</p>
-        </div>
-        <div class="p-5 bg-white rounded shadow-sm">
-          <div class="text-2xl font-bold mb-2">3. Mise en ligne</div>
-          <p class="text-sm text-gray-600">Livraison finale et mise en ligne (ou envoi des fichiers). Assistance 7 jours après livraison.</p>
-        </div>
+      <div class="mt-6 bg-gray-50 p-4 rounded border text-center">
+        <div class="text-sm text-gray-500">Prix clair</div>
+        <div class="mt-2 text-3xl font-bold" style="color:var(--brand)">149€</div>
+        <div class="text-sm text-gray-500">Livré en 72h après validation des éléments</div>
+        <a href="#contact" class="mt-4 inline-block bg-[var(--brand)] text-white px-4 py-2 rounded-md">Commander maintenant</a>
       </div>
     </section>
 
     <!-- Exemples / Portfolio -->
     <section id="exemples" class="bg-white rounded-xl p-6 shadow-sm fade">
-      <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Exemples & Démo</h3>
-      <div class="grid md:grid-cols-3 gap-4">
+      <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Exemple de site</h3>
+      <div class="grid md:grid-cols-1 gap-4">
         <a href="https://officielstephanewinckel.vercel.app" target="_blank" rel="noopener" class="block rounded overflow-hidden border hover:shadow">
           <img src="https://via.placeholder.com/600x360.png?text=Dirickx+Demo" alt="Démo Stephane" class="w-full h-40 object-cover" />
           <div class="p-3 text-sm">Chargé d'affaire — Clôtures & sécurité (Luxembourg)</div>
         </a>
-        <!-- Placeholders : remplace par tes réels projets -->
-        <div class="border rounded overflow-hidden">
-          <img src="https://via.placeholder.com/600x360.png?text=Artisan" alt="Artisan" class="w-full h-40 object-cover" />
-          <div class="p-3 text-sm">Artisan — Plomberie / Chauffage</div>
-        </div>
-        <div class="border rounded overflow-hidden">
-          <img src="https://via.placeholder.com/600x360.png?text=Coach" alt="Coach" class="w-full h-40 object-cover" />
-          <div class="p-3 text-sm">Coach indépendant</div>
-        </div>
       </div>
     </section>
 
@@ -160,39 +115,27 @@
       <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Commander / Contact</h3>
       <div class="grid md:grid-cols-2 gap-6">
         <div>
-          <p class="text-gray-700 mb-4">Prêt à lancer ? Remplis le formulaire ci-dessous ou envoie un message direct à <strong style="color:var(--brand)">bonjour@proonepage.example</strong> (remplace par ton email réel).</p>
+          <p class="text-gray-700 mb-4">Prêt à lancer ? Remplis le formulaire ci-dessous ou envoie un message direct à <strong style="color:var(--brand)">proonepage.pro@gmail.com</strong>.</p>
           <ul class="text-sm text-gray-600 space-y-1">
-            <li>✔ Prix de base : 149€</li>
+            <li>✔ Prix : 149€</li>
             <li>✔ Livraison : 72 heures après validation</li>
-            <li>✔ Paiement : virement, PayPal ou paiement en ligne (à configurer)</li>
+            <li>✔ Paiement : virement ou PayPal (à configurer)</li>
           </ul>
         </div>
-
-        <!-- Formulaire (Formspree placeholder) -->
         <form action="https://formspree.io/f/yourformid" method="POST" class="space-y-3">
           <div><label class="text-sm font-medium">Nom / Entreprise</label><input name="name" required class="mt-1 block w-full rounded-md border px-3 py-2" /></div>
           <div><label class="text-sm font-medium">Email</label><input name="email" type="email" required class="mt-1 block w-full rounded-md border px-3 py-2" /></div>
           <div><label class="text-sm font-medium">Téléphone</label><input name="phone" class="mt-1 block w-full rounded-md border px-3 py-2" /></div>
           <div><label class="text-sm font-medium">Votre message / Brief</label><textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea></div>
-          <div class="text-sm text-gray-500">Si vous commandez : indiquez "Commande 149€" dans le message.</div>
+          <div class="text-sm text-gray-500">Indiquez "Commande 149€" dans le message si vous commandez.</div>
           <button type="submit" class="w-full bg-[var(--brand)] text-white px-4 py-2 rounded-md">Envoyer la demande</button>
         </form>
       </div>
     </section>
 
-    <!-- FAQ -->
-    <section class="fade">
-      <h4 class="text-xl font-semibold mb-3" style="color:var(--brand)">Questions fréquentes</h4>
-      <div class="space-y-2 text-sm text-gray-700">
-        <div><strong>Q :</strong> Dois-je fournir les images ?<br><strong>A :</strong> Oui idéalement — je peux utiliser des images libres si besoin.</div>
-        <div><strong>Q :</strong> Hébergement inclus ?<br><strong>A :</strong> Optionnel : je peux héberger pour 29€/an ou fournir les fichiers pour mise en ligne par vos soins.</div>
-        <div><strong>Q :</strong> Paiement ?<br><strong>A :</strong> Virement, PayPal. Possibilité d'intégrer paiement en ligne sur demande.</div>
-      </div>
-    </section>
-
     <!-- Footer -->
     <footer class="text-sm text-gray-500 text-center py-8">
-      © <span id="year"></span> ProOnePage — Page pro en 72h · <span style="color:var(--brand)">À partir de 149€</span>
+      © <span id="year"></span> ProOnePage — Page pro en 72h · 149€
     </footer>
 
   </main>
