--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li>✔ Paiement : virement ou PayPal (à configurer)</li>
           </ul>
         </div>
-        <form action="https://formspree.io/f/yourformid" method="POST" class="space-y-3">
+        <form action="https://formspree.io/f/xvgweprk" method="POST" class="space-y-3">
           <div><label class="text-sm font-medium">Nom / Entreprise</label><input name="name" required class="mt-1 block w-full rounded-md border px-3 py-2" /></div>
           <div><label class="text-sm font-medium">Email</label><input name="email" type="email" required class="mt-1 block w-full rounded-md border px-3 py-2" /></div>
           <div><label class="text-sm font-medium">Téléphone</label><input name="phone" class="mt-1 block w-full rounded-md border px-3 py-2" /></div>
