--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ProOnePage — Page pro en 72h · 149€</title>
   <meta name="description" content="ProOnePage — Je crée votre page web professionnelle, rapide et responsive. Idéal pour artisans, indépendants et petites entreprises. Livraison en 72h." />
+  
   <!-- Open Graph -->
   <meta property="og:title" content="ProOnePage — Page pro en 72h · 149€" />
   <meta property="og:description" content="Page web simple, design pro, formulaire de contact et optimisation locale. Démo: officielstephanewinckel.vercel.app" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=ProOnePage" />
 
+  <!-- Tailwind -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
   <style>
-    :root{--brand:#001f3f} /* Bleu marine */
-    body{font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;}
-    .btn{transition:all .18s ease}
-    .btn:hover{transform:translateY(-3px)}
-    header{backdrop-filter:saturate(120%) blur(4px)}
-    .fade{opacity:0;transform:translateY(12px);animation:fade .6s forwards}
-    @keyframes fade{to{opacity:1;transform:none}}
+    :root { --brand: #001f3f; } /* Bleu marine */
+    body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; color: #111; }
+    .btn { transition: all .18s ease; }
+    .btn:hover { transform: translateY(-3px); }
+    header { backdrop-filter: saturate(120%) blur(4px); }
+    .fade { opacity: 0; transform: translateY(12px); animation: fade .6s forwards; }
+    @keyframes fade { to { opacity: 1; transform: none; } }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-900 leading-relaxed">
 
-  <!-- Header -->
+<body class="bg-gray-50 leading-relaxed">
+
+  <!-- HEADER -->
   <header class="sticky top-0 z-40 bg-white/90 border-b border-gray-200">
     <div class="max-w-5xl mx-auto px-6 py-4 flex items-center justify-between">
       <div class="flex items-center gap-4">
@@ -42,9 +46,10 @@
     </div>
   </header>
 
+  <!-- MAIN -->
   <main class="max-w-5xl mx-auto px-6 py-16 space-y-20">
 
-    <!-- Hero -->
+    <!-- HERO -->
     <section class="grid md:grid-cols-2 gap-10 items-center">
       <div class="fade">
         <h1 class="text-4xl md:text-5xl font-bold mb-4" style="color:var(--brand)">Une page web pro, rapide et visible — livrée en 72h</h1>
@@ -74,7 +79,7 @@
       </div>
     </section>
 
-    <!-- Offre -->
+    <!-- OFFRE -->
     <section id="offre" class="bg-white rounded-xl p-8 shadow-sm fade">
       <h2 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Ce qui est inclus — Formule unique • 149€</h2>
       <div class="grid md:grid-cols-3 gap-6">
@@ -91,6 +96,7 @@
           <p class="text-sm text-gray-600">Hébergement simple (ou livraison des fichiers) + nom de domaine en option.</p>
         </div>
       </div>
+
       <div class="mt-6 bg-gray-50 p-4 rounded border text-center">
         <div class="text-sm text-gray-500">Prix clair</div>
         <div class="mt-2 text-3xl font-bold" style="color:var(--brand)">149€</div>
@@ -99,7 +105,7 @@
       </div>
     </section>
 
-    <!-- Exemples / Portfolio -->
+    <!-- EXEMPLE -->
     <section id="exemples" class="bg-white rounded-xl p-6 shadow-sm fade">
       <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Exemple de site</h3>
       <div class="grid md:grid-cols-1 gap-4">
@@ -110,30 +116,51 @@
       </div>
     </section>
 
-    <!-- Contact / Commande -->
+    <!-- CONTACT -->
     <section id="contact" class="bg-white rounded-xl p-8 shadow-sm fade">
       <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Commander / Contact</h3>
       <div class="grid md:grid-cols-2 gap-6">
         <div>
-          <p class="text-gray-700 mb-4">Prêt à lancer ? Remplis le formulaire ci-dessous ou envoie un message direct à <strong style="color:var(--brand)">proonepage.pro@gmail.com</strong>.</p>
+          <p class="text-gray-700 mb-4">
+            Prêt à lancer ? Remplis le formulaire ci-dessous ou envoie un message direct à 
+            <strong style="color:var(--brand)">proonepage.pro@gmail.com</strong>.
+          </p>
           <ul class="text-sm text-gray-600 space-y-1">
             <li>✔ Prix : 149€</li>
             <li>✔ Livraison : 72 heures après validation</li>
             <li>✔ Paiement : virement ou PayPal (à configurer)</li>
           </ul>
         </div>
-        <form action="https://formspree.io/f/xvgweprk" method="POST" class="space-y-3">
-          <div><label class="text-sm font-medium">Nom / Entreprise</label><input name="name" required class="mt-1 block w-full rounded-md border px-3 py-2" /></div>
-          <div><label class="text-sm font-medium">Email</label><input name="email" type="email" required class="mt-1 block w-full rounded-md border px-3 py-2" /></div>
-          <div><label class="text-sm font-medium">Téléphone</label><input name="phone" class="mt-1 block w-full rounded-md border px-3 py-2" /></div>
-          <div><label class="text-sm font-medium">Votre message / Brief</label><textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea></div>
-          <div class="text-sm text-gray-500">Indiquez "Commande 149€" dans le message si vous commandez.</div>
-          <button type="submit" class="w-full bg-[var(--brand)] text-white px-4 py-2 rounded-md">Envoyer la demande</button>
+
+        <!-- FORMULAIRE -->
+        <form action="https://formspree.io/f/yourformid" method="POST" class="space-y-3">
+          <div>
+            <label class="text-sm font-medium">Nom / Entreprise</label>
+            <input name="name" required class="mt-1 block w-full rounded-md border px-3 py-2" />
+          </div>
+          <div>
+            <label class="text-sm font-medium">Email</label>
+            <input name="email" type="email" required class="mt-1 block w-full rounded-md border px-3 py-2" />
+          </div>
+          <div>
+            <label class="text-sm font-medium">Téléphone</label>
+            <input name="phone" class="mt-1 block w-full rounded-md border px-3 py-2" />
+          </div>
+          <div>
+            <label class="text-sm font-medium">Votre message / Brief</label>
+            <textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea>
+          </div>
+
+          <!-- BOUTON -->
+          <button type="submit" 
+            class="w-full bg-[var(--brand)] text-white px-6 py-3 rounded-lg text-lg font-semibold hover:bg-blue-900 transition">
+            🚀 Envoyer le message
+          </button>
         </form>
       </div>
     </section>
 
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer class="text-sm text-gray-500 text-center py-8">
       © <span id="year"></span> ProOnePage — Page pro en 72h · 149€
     </footer>
@@ -142,7 +169,7 @@
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelectorAll('.fade').forEach((el,i)=>setTimeout(()=>el.style.opacity=1, 100*i));
+    document.querySelectorAll('.fade').forEach((el, i) => setTimeout(() => el.style.opacity = 1, 100 * i));
   </script>
 </body>
 </html>
