--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ProOnePage — Page pro en 72h · 149€</title>
   <meta name="description" content="ProOnePage — Je crée votre page web professionnelle, rapide et responsive. Idéal pour artisans, indépendants et petites entreprises. Livraison en 72h." />
-  
+
   <!-- Open Graph -->
   <meta property="og:title" content="ProOnePage — Page pro en 72h · 149€" />
   <meta property="og:description" content="Page web simple, design pro, formulaire de contact et optimisation locale. Démo: officielstephanewinckel.vercel.app" />
@@ -151,10 +151,9 @@
             <textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea>
           </div>
 
-          <!-- BOUTON -->
-          <button type="submit" 
-            class="w-full bg-[var(--brand)] text-white px-6 py-3 rounded-lg text-lg font-semibold hover:bg-blue-900 transition">
-            🚀 Envoyer le message
+          <!-- BOUTON SIMPLE -->
+          <button type="submit" class="w-full text-white bg-[var(--brand)] px-5 py-2 rounded-md text-sm font-medium hover:opacity-90 transition">
+            Envoyer
           </button>
         </form>
       </div>
