--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
             <textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea>
           </div>
 
-          <!-- BOUTON SIMPLE -->
-          <button type="submit" class="w-full text-white bg-[var(--brand)] px-5 py-2 rounded-md text-sm font-medium hover:opacity-90 transition">
+          <!-- BOUTON SOBRE -->
+          <button type="submit" 
+            class="w-full text-[var(--brand)] border border-[var(--brand)] px-5 py-2 rounded-md text-sm font-medium hover:bg-[var(--brand)] hover:text-white transition">
             Envoyer
           </button>
         </form>
