--- a/index.html
+++ b/index.html
@@ -151,9 +151,8 @@
             <textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea>
           </div>
 
-          <!-- BOUTON SOBRE -->
-          <button type="submit" 
-            class="w-full text-[var(--brand)] border border-[var(--brand)] px-5 py-2 rounded-md text-sm font-medium hover:bg-[var(--brand)] hover:text-white transition">
+          <!-- BOUTON TEXTE SIMPLE -->
+          <button type="submit" class="text-[var(--brand)] font-medium text-sm">
             Envoyer
           </button>
         </form>
