--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
       <div class="fade">
         <div class="bg-white rounded-xl shadow-md overflow-hidden">
-          <img src="https://via.placeholder.com/800x480.png?text=Exemple+ProOnePage" alt="Aperçu ProOnePage" class="w-full h-56 object-cover" />
-          <div class="p-5">
-            <p class="text-sm text-gray-500">Exemple : site Dirickx Luxembourg — design sobre et création rapide.</p>
-            <div class="mt-3">
-              <a href="https://officielstephanewinckel.vercel.app" target="_blank" rel="noopener" class="text-sm text-[var(--brand)] hover:underline">Voir la démo</a>
-            </div>
+          <iframe src="https://officielstephanewinckel.vercel.app" 
+                  class="w-full h-80 border-0"
+                  title="Exemple de site - Dirickx Luxembourg"
+                  loading="lazy"></iframe>
+          <div class="p-5 text-center">
+            <p class="text-sm text-gray-500">Exemple concret : site Dirickx Luxembourg — créé avec ProOnePage.</p>
           </div>
         </div>
       </div>
@@ -106,14 +106,17 @@
     </section>
 
     <!-- EXEMPLE -->
-    <section id="exemples" class="bg-white rounded-xl p-6 shadow-sm fade">
-      <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Exemple de site</h3>
-      <div class="grid md:grid-cols-1 gap-4">
-        <a href="https://officielstephanewinckel.vercel.app" target="_blank" rel="noopener" class="block rounded overflow-hidden border hover:shadow">
-          <img src="https://via.placeholder.com/600x360.png?text=Dirickx+Demo" alt="Démo Stephane" class="w-full h-40 object-cover" />
-          <div class="p-3 text-sm">Chargé d'affaire — Clôtures & sécurité (Luxembourg)</div>
-        </a>
+    <section id="exemples" class="bg-white rounded-xl p-8 shadow-sm fade">
+      <h3 class="text-2xl font-semibold mb-6 text-center" style="color:var(--brand)">Exemple de site</h3>
+      <div class="rounded-xl overflow-hidden shadow-md border">
+        <iframe src="https://officielstephanewinckel.vercel.app" 
+                class="w-full h-[600px] border-0"
+                title="Démo Dirickx Luxembourg"
+                loading="lazy"></iframe>
       </div>
+      <p class="text-center text-sm text-gray-500 mt-3">
+        Exemple : Stéphane Winckel – Dirickx Luxembourg (réalisé avec ProOnePage)
+      </p>
     </section>
 
     <!-- CONTACT -->
@@ -133,26 +136,26 @@
         </div>
 
         <!-- FORMULAIRE -->
-        <form action="https://formspree.io/f/yourformid" method="POST" class="space-y-3">
+        <form action="https://formspree.io/f/yourformid" method="POST" class="space-y-3 text-center">
           <div>
-            <label class="text-sm font-medium">Nom / Entreprise</label>
+            <label class="text-sm font-medium block text-left">Nom / Entreprise</label>
             <input name="name" required class="mt-1 block w-full rounded-md border px-3 py-2" />
           </div>
           <div>
-            <label class="text-sm font-medium">Email</label>
+            <label class="text-sm font-medium block text-left">Email</label>
             <input name="email" type="email" required class="mt-1 block w-full rounded-md border px-3 py-2" />
           </div>
           <div>
-            <label class="text-sm font-medium">Téléphone</label>
+            <label class="text-sm font-medium block text-left">Téléphone</label>
             <input name="phone" class="mt-1 block w-full rounded-md border px-3 py-2" />
           </div>
           <div>
-            <label class="text-sm font-medium">Votre message / Brief</label>
+            <label class="text-sm font-medium block text-left">Votre message / Brief</label>
             <textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea>
           </div>
 
-          <!-- BOUTON TEXTE SIMPLE -->
-          <button type="submit" class="text-[var(--brand)] font-medium text-sm">
+          <!-- BOUTON TEXTE SIMPLE CENTRÉ -->
+          <button type="submit" class="text-[var(--brand)] font-medium text-sm mt-3 inline-block">
             Envoyer
           </button>
         </form>
