--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     .fade { opacity: 0; transform: translateY(12px); animation: fade .6s forwards; }
     @keyframes fade { to { opacity: 1; transform: none; } }
     .demo-thumb { position: relative; overflow: hidden; border-radius: 0.75rem; }
-    .demo-thumb img { width: 100%; height: auto; transition: transform 0.5s ease; }
-    .demo-thumb:hover img { transform: scale(1.03); }
+    .demo-thumb img { width: 100%; height: auto; transition: transform 0.5s ease; border-radius: 0.75rem; }
+    .demo-thumb:hover img { transform: scale(1.02); }
     .demo-overlay {
       position: absolute; inset: 0;
-      background: rgba(0,0,0,0.15);
+      background: rgba(0,0,0,0.1);
       opacity: 0; transition: opacity 0.3s ease;
     }
     .demo-thumb:hover .demo-overlay { opacity: 1; }
@@ -78,7 +78,7 @@
       <div class="fade">
         <div class="bg-white rounded-xl shadow-md overflow-hidden">
           <a href="https://officielstephanewinckel.vercel.app" target="_blank" rel="noopener" class="demo-thumb block">
-            <img src="https://officielstephanewinckel.vercel.app/hero-project.jpg" alt="Aperçu du site Dirickx Luxembourg" />
+            <img src="./screen-site.jpeg" alt="Aperçu du site Dirickx Luxembourg" />
             <div class="demo-overlay"></div>
           </a>
           <div class="p-5 text-center">
@@ -119,7 +119,7 @@
       <h3 class="text-2xl font-semibold mb-6" style="color:var(--brand)">Exemple de site réalisé</h3>
       <div class="max-w-4xl mx-auto">
         <a href="https://officielstephanewinckel.vercel.app" target="_blank" rel="noopener" class="demo-thumb inline-block shadow-lg">
-          <img src="https://officielstephanewinckel.vercel.app/hero-project.jpg" alt="Aperçu Dirickx Luxembourg" class="rounded-xl" />
+          <img src="./screen-site.jpeg" alt="Aperçu Dirickx Luxembourg" class="rounded-xl" />
           <div class="demo-overlay"></div>
         </a>
         <p class="text-sm text-gray-500 mt-3">Cliquez sur l’image pour visiter le site complet.</p>
