--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ProOnePage — Page pro en 72h · 149€</title>
   <meta name="description" content="ProOnePage — Je crée votre page web professionnelle, rapide et responsive. Idéal pour artisans, indépendants et petites entreprises. Livraison en 72h." />
+  <link rel="canonical" href="https://tonsite.com/" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="ProOnePage — Page pro en 72h · 149€" />
@@ -18,11 +19,11 @@
   <style>
     :root { --brand: #001f3f; } /* Bleu marine */
     body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; color: #111; }
-    .btn { transition: all .18s ease; }
+    .btn { transition: all .18s ease; cursor: pointer; }
     .btn:hover { transform: translateY(-3px); }
     header { backdrop-filter: saturate(120%) blur(4px); }
-    .fade { opacity: 0; transform: translateY(12px); animation: fade .6s forwards; }
-    @keyframes fade { to { opacity: 1; transform: none; } }
+    .fade { opacity: 0; transform: translateY(12px); animation: fade 0.6s forwards; }
+    @keyframes fade { to { opacity: 1; transform: translateY(0); } }
     .demo-thumb { position: relative; overflow: hidden; border-radius: 0.75rem; }
     .demo-thumb img { width: 100%; height: auto; transition: transform 0.5s ease; border-radius: 0.75rem; }
     .demo-thumb:hover img { transform: scale(1.02); }
@@ -32,6 +33,8 @@
       opacity: 0; transition: opacity 0.3s ease;
     }
     .demo-thumb:hover .demo-overlay { opacity: 1; }
+    input, textarea { outline: none; }
+    input:focus, textarea:focus { border-color: var(--brand); box-shadow: 0 0 0 2px rgba(0,31,63,0.2); }
   </style>
 </head>
 
@@ -161,8 +164,8 @@
             <textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea>
           </div>
 
-          <!-- BOUTON TEXTE SIMPLE CENTRÉ -->
-          <button type="submit" class="text-[var(--brand)] font-medium text-sm mt-3 inline-block">
+          <!-- BOUTON FORMULAIRE COHÉRENT -->
+          <button type="submit" class="btn bg-[var(--brand)] text-white px-5 py-3 rounded-md mt-3">
             Envoyer
           </button>
         </form>
@@ -177,8 +180,21 @@
   </main>
 
   <script>
+    // Année dynamique
     document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelectorAll('.fade').forEach((el, i) => setTimeout(() => el.style.opacity = 1, 100 * i));
+
+    // Animation fade avec IntersectionObserver pour déclenchement à l'apparition
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if(entry.isIntersecting) {
+          entry.target.style.opacity = 1;
+          entry.target.style.transform = 'translateY(0)';
+          observer.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.1 });
+
+    document.querySelectorAll('.fade').forEach(el => observer.observe(el));
   </script>
 </body>
 </html>
