--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
             <textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea>
           </div>
 
-          <!-- BOUTON FORMULAIRE COHÉRENT -->
-          <button type="submit" class="btn bg-[var(--brand)] text-white px-5 py-3 rounded-md mt-3">
+          <!-- BOUTON FORMULAIRE VISIBLE -->
+          <button type="submit" class="btn border border-[var(--brand)] text-[var(--brand)] px-5 py-3 rounded-md mt-3">
             Envoyer
           </button>
         </form>
