--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     }
     .animate-build {
       transform-origin: left;
-      animation: build 0.8s forwards;
+      animation: build 2s ease-in-out infinite; /* Durée plus longue + boucle infinie */
     }
     .animate-build.delay-100 { animation-delay: 0.1s; }
-    .animate-build.delay-200 { animation-delay: 0.2s; }
-    .animate-build.delay-300 { animation-delay: 0.3s; }
-    .animate-build.delay-400 { animation-delay: 0.4s; }
-    .animate-build.delay-500 { animation-delay: 0.5s; }
+    .animate-build.delay-200 { animation-delay: 0.4s; }
+    .animate-build.delay-300 { animation-delay: 0.7s; }
+    .animate-build.delay-400 { animation-delay: 1s; }
+    .animate-build.delay-500 { animation-delay: 1.3s; }
   </style>
 </head>
 
@@ -94,17 +94,17 @@
         </div>
       </div>
 
-      <!-- Animation de page qui se construit -->
+      <!-- Animation de page qui se construit (boucle infinie) -->
       <div class="fade flex justify-center items-center">
         <div class="relative w-64 h-40 bg-gray-100 rounded-lg shadow-md overflow-hidden border border-gray-300">
           <!-- Header -->
           <div class="bg-[var(--brand)] h-4 w-full animate-pulse"></div>
           <!-- Section 1 -->
-          <div class="mt-2 mx-2 h-3 bg-gray-300 rounded animate-build delay-100"></div>
-          <div class="mt-1 mx-2 h-3 bg-gray-300 rounded animate-build delay-200"></div>
+          <div class="mt-1 mx-2 h-2 bg-gray-300 rounded animate-build delay-100"></div>
+          <div class="mt-1 mx-2 h-2 bg-gray-300 rounded animate-build delay-200"></div>
           <!-- Section 2 -->
-          <div class="mt-2 mx-2 h-3 bg-gray-300 rounded animate-build delay-300"></div>
-          <div class="mt-1 mx-2 h-3 bg-gray-300 rounded animate-build delay-400"></div>
+          <div class="mt-1 mx-2 h-2 bg-gray-300 rounded animate-build delay-300"></div>
+          <div class="mt-1 mx-2 h-2 bg-gray-300 rounded animate-build delay-400"></div>
           <!-- Footer -->
           <div class="absolute bottom-2 left-2 right-2 h-2 bg-gray-400 rounded animate-build delay-500"></div>
         </div>
