--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     .hero-right { flex:1 1 500px; max-width:600px; display:flex; justify-content:center; align-items:center; padding:20px; }
 
     /* PC Screen réaliste */
-    .pc-screen-container { position: relative; width:100%; max-width:500px; height:320px; background:#e5e5e5; border-radius:16px; border:2px solid #ccc; box-shadow:0 16px 40px rgba(0,0,0,0.2); overflow:hidden; display:flex; flex-direction:column; }
+    .pc-screen-container { position: relative; width:100%; max-width:500px; height:350px; background:#e5e5e5; border-radius:16px; border:2px solid #ccc; box-shadow:0 16px 40px rgba(0,0,0,0.2); overflow:hidden; display:flex; flex-direction:column; }
     .pc-screen-top { height:30px; background:#ccc; display:flex; align-items:center; padding:0 10px; gap:6px; }
     .pc-dot { width:12px; height:12px; border-radius:50%; }
     .dot-red { background:#ff5f57; }
@@ -42,11 +42,11 @@
     .pc-screen-body { flex:1; padding:12px; display:flex; flex-direction:column; justify-content:space-around; }
 
     /* Pied de l'écran */
-    .pc-screen-footer { height:24px; background:#ddd; border-top:1px solid #bbb; border-radius:0 0 16px 16px; }
+    .pc-screen-footer { height:30px; background:#ddd; border-top:1px solid #bbb; border-radius:0 0 16px 16px; }
 
     /* Animation "réaliste" */
-    .anim-block { border-radius:6px; background:#d1d5db; opacity:0; transform:translateY(15px); animation: build 2.5s ease-in-out infinite; }
-    .block-text { height:16px; width:80%; margin:4px 0; }
+    .anim-block { border-radius:6px; opacity:0; transform:translateY(15px); animation: build 2.5s ease-in-out infinite; }
+    .block-text { height:16px; width:80%; margin:4px 0; background:#d1d5db; }
     .block-title { height:20px; width:50%; margin:4px 0; background:#b0c4de; }
     .block-button { height:16px; width:30%; background:#8bb1ff; margin:6px 0; }
     .block-image { height:40px; width:60%; background:#cfcfcf; margin:6px 0; }
@@ -127,8 +127,8 @@
     </div>
   </section>
 
-  <!-- SECTIONS SUIVANTES FULL WIDTH -->
-  <section>
+  <!-- OFFRE -->
+  <section id="offre">
     <div class="section-inner bg-white rounded-xl p-8 shadow-sm fade">
       <h2 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Ce qui est inclus — Formule unique • 149€</h2>
       <div class="grid md:grid-cols-3 gap-6">
@@ -149,7 +149,7 @@
   </section>
 
   <!-- EXEMPLE -->
-  <section>
+  <section id="exemples">
     <div class="section-inner bg-white rounded-xl p-8 shadow-sm fade text-center">
       <h3 class="text-2xl font-semibold mb-6" style="color:var(--brand)">Exemple de site réalisé</h3>
       <div class="max-w-4xl mx-auto">
@@ -163,7 +163,7 @@
   </section>
 
   <!-- CONTACT -->
-  <section>
+  <section id="contact">
     <div class="section-inner bg-white rounded-xl p-8 shadow-sm fade">
       <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Commander / Contact</h3>
       <div class="grid md:grid-cols-2 gap-6">
@@ -209,7 +209,10 @@
   </footer>
 
   <script>
+    // Mettre l'année automatiquement
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Fade-in classique
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
         if(entry.isIntersecting){
@@ -220,6 +223,18 @@
       });
     }, { threshold: 0.1 });
     document.querySelectorAll('.fade').forEach(el => observer.observe(el));
+
+    // Smooth scroll centré pour toutes les ancres
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        if(target){
+          target.scrollIntoView({ behavior: 'smooth', block: 'center' });
+        }
+      });
+    });
   </script>
+
 </body>
 </html>
