--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ProOnePage — Page web pro en 72h, votre nouvelle carte de contact virtuelle.</title>
+  <title>Page web pro en 72h pour artisans et indépendants, votre nouvelle carte de contact virtuelle.</title>
   <meta name="description" content="ProOnePage — Je crée votre page web professionnelle, rapide et responsive. Idéal pour artisans, indépendants et petites entreprises. Livraison en 72h." />
 
   <!-- Open Graph -->
